brat/test/golden/error/arith_implicit_conversion2.brat
f(Int, Float) -> Int
f(x, y) = x + (y - x)
