brat/test/golden/error/arith_implicit_conversion2.brat.golden
Error in test/golden/error/arith_implicit_conversion2.brat@2:16-17
f(x, y) = x + (y - x)
               ^

  Type mismatch when checking y
Expected: (left :: Int)
But got:  (y :: Float)


